# libxcorr

./: .gitignore  CMakeLists.txt  README.md  README.txt.orig
benchmark/: Dockerfile.fftw  Dockerfile.no_fftw  Makefile  benchmark.c
example/: Makefile  example.c  example.py
include/: xcorr.h
src/: fftw.c  generic.c  timedomain.c  xcorr.c
